Fixes uneven column widths in Firefox. Width attribute is deprecated and not supported in FF

--- a/assets/css/channel_lineup.css
+++ b/assets/css/channel_lineup.css
@@ -588,6 +588,14 @@ span.btn-feedback:hover {
     margin-right: 5px;
 }
 
+.name {
+  width: 25%;
+}
+
+.num {
+  width: 8.33%;
+}
+
 .c-name {
     color: #0567ae;
     font-weight: bold;
